feat: attempt at creating assembly version of bigintadd

--- a/readme
+++ b/readme
@@ -142,9 +142,9 @@ Stress:
 What are the CPU times consumed by the programs from Parts 2a, 2b, 2d,
 2e, and 2f to compute fib(250000) on armlab? Fill in the blanks.
 
-Part 2a:  _____ seconds
+Part 2a:  11.918860 seconds
 
-Part 2b:  _____ seconds
+Part 2b:  2.622108 seconds
 
 Part 2d:  _____ seconds
 
