feat: testing if assembly implementation is correct

--- a/readme
+++ b/readme
@@ -146,7 +146,7 @@ Part 2a:  11.918860 seconds
 
 Part 2b:  2.622108 seconds
 
-Part 2d:  _____ seconds
+Part 2d:  10.352220 seconds
 
 Part 2e:  _____ seconds
 
