feat: created guarded for loop in assembly

--- a/readme
+++ b/readme
@@ -148,7 +148,7 @@ Part 2b:  2.622108 seconds
 
 Part 2d:  10.352220 seconds
 
-Part 2e:  _____ seconds
+Part 2e:  7.002808 seconds
 
 Part 2f:  _____ seconds
 
