fixed a txt file

--- a/readme
+++ b/readme
@@ -26,8 +26,6 @@ The course's website.
 Documents that are referenced directly by the course's website. Such
 documents include the course's lecture slides and precept handouts.
 
-Professor Moretti
-
 ------------------------------------------------------------------------
 Student 2: What authorized sources of information did you use to
 complete the assignment? COPY THE LIST of authorized sources of
@@ -108,6 +106,17 @@ Boundary:
     - mywc_max_lines_max_chars.txt: File with 1000 lines and ~50000
                                     printable ASCII characters, tests
                                     maximum possible file length.
+    - mywc_mixed_empty_lines_file.txt: File with multiple lines, some of
+                                       of which are empty and some of
+                                       which contain printable ascii
+                                       characters. Tests whether counter
+                                       can count blank lines in the
+                                       middle of a input.
+    - mywc_mixed_spaces_tabs_file.txt: File with one line containing
+                                       spaces and another line with
+                                       tabs. Tests the counter's ability
+                                       to detect tabs as white space and
+                                       update correct counters.
     - mywc_single_char_file.txt: File with 1 char, tests counting a
                                  single character.
     - mywc_single_word_file.txt: File with 1 word, tests counting a
@@ -140,10 +149,10 @@ Stress:
                                           ASCII characters with 27+
                                           spaces, tests very long
                                           "words".
-    - mywc_max_chars_file.txt: File with 50000 printable ASCII
+    - mywc_max_chars_file.txt: File with ~50000 printable ASCII
                                characters, tests maximum possible file
                                length (characters in one line).
-    - mywc_max_lines_max_chars.txt: File with 1000 lines and ~50000
+    - mywc_max_lines_max_chars.txt: File with ~1000 lines and ~50000
                                     printable ASCII characters, tests
                                     maximum possible file length (lines
                                     and characters).
